fixes some auto-login/login issues from the auth work on the previous commit in the isAdmin branch. Question posted to stackoverflow for the chat view time slide out issue http://stackoverflow.com/questions/39022559/css-flexbox-chat-view-moves-left-on-the-first-new-message-added-to-the-chat-room

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10866,8 +10866,7 @@ ion-header-bar .calendar-form {
   display: flex !important;
   align-content: center !important;
   align-items: center !important;
-  border: none;
-  width: calc(100% + 72px); }
+  border: none; }
   .chat-room .messages .chatter-pic-wrapper {
     display: inline-block;
     width: 42px;
